# MNIST_handwritten_digits_classifier

./: .gitignore  MNIST_Handwritten_Digits-STARTER.ipynb  mnist_cnn.pt  pyproject.toml
